[gd_scene load_steps=16 format=2]

[ext_resource path="res://Mini Scenes/Scenes/Tutorial2.gd" type="Script" id=1]
[ext_resource path="res://Mini Scenes/Popups/VictoryViewer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mini Scenes/Popups/TutorialPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/Portraits/Salem V1.png" type="Texture" id=4]
[ext_resource path="res://Art/Portraits/Grolk V1.png" type="Texture" id=5]
[ext_resource path="res://Art/Portraits/Thoren V1.png" type="Texture" id=6]
[ext_resource path="res://Mini Scenes/Pieces/StoneBackground.tscn" type="PackedScene" id=7]
[ext_resource path="res://Mini Scenes/Pieces/PaperBackground.tscn" type="PackedScene" id=8]
[ext_resource path="res://Mini Scenes/Intelligences/GrolkAI.gd" type="Script" id=9]
[ext_resource path="res://Mini Scenes/Intelligences/ThorenAI.tscn" type="PackedScene" id=10]
[ext_resource path="res://Mini Scenes/Intelligences/SalemAI.tscn" type="PackedScene" id=11]
[ext_resource path="res://Fonts/LiberationSerif-Bold.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Fonts/Kayambang.ttf" type="DynamicFontData" id=13]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 13 )

[node name="Tutorial2" type="Node"]
script = ExtResource( 1 )
victory_panel = ExtResource( 2 )
address = "res://Mini Scenes/Scenes/Tutorial2.tscn"
popupbox = ExtResource( 3 )
these_players = [ [ "Grolk", ExtResource( 5 ) ], [ "Thoren", ExtResource( 6 ) ], [ "Salem", ExtResource( 4 ) ] ]

[node name="NinePatchRect" parent="." instance=ExtResource( 7 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="ObjectiveArea" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" parent="ObjectiveArea" instance=ExtResource( 8 )]
anchor_left = 0.75
anchor_top = 0.4
anchor_right = 0.75
anchor_bottom = 0.4
margin_left = -170.0
margin_top = -150.0
margin_right = 170.0
margin_bottom = 150.0
mouse_filter = 1

[node name="Label" type="Label" parent="ObjectiveArea/Background"]
margin_left = 10.0
margin_top = 56.0
margin_right = 329.0
margin_bottom = 288.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "T
T
T
T"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objective" type="Label" parent="ObjectiveArea/Background"]
margin_left = 9.85419
margin_top = 9.65834
margin_right = 318.854
margin_bottom = 50.6583
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Objective"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SalemAI" parent="." instance=ExtResource( 11 )]

[node name="GrolkAI" type="Node" parent="."]
script = ExtResource( 9 )

[node name="ThorenAI" parent="." instance=ExtResource( 10 )]

[node name="Audio" type="AudioStreamPlayer" parent="."]
[connection signal="advanced_popup" from="." to="." method="_on_Tutorial2_advanced_popup"]
[connection signal="gui_input" from="ObjectiveArea/Background" to="ObjectiveArea" method="_receive_input"]
[connection signal="gui_input" from="ObjectiveArea/Background/Label" to="ObjectiveArea" method="_receive_input"]
[connection signal="gui_input" from="ObjectiveArea/Background/Objective" to="ObjectiveArea" method="_receive_input"]
[connection signal="improve_relations" from="SalemAI" to="SalemAI" method="improve_relations"]
[connection signal="send_message" from="SalemAI" to="." method="send_message"]
[connection signal="set_relations" from="SalemAI" to="SalemAI" method="set_relations"]
[connection signal="worsen_relations" from="SalemAI" to="SalemAI" method="worsen_relations"]
[connection signal="improve_relations" from="GrolkAI" to="GrolkAI" method="improve_relations"]
[connection signal="set_relations" from="GrolkAI" to="GrolkAI" method="set_relations"]
[connection signal="worsen_relations" from="GrolkAI" to="GrolkAI" method="worsen_relations"]
